changed the script src attribute

--- a/index.html
+++ b/index.html
@@ -51,6 +51,6 @@
     </main>
     
     
-    <script src="/Unit Converter/scripts.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
